--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-BOT_TOKEN=
-ADMIN_USERNAME=
-WEBHOOK_URL=
-CRM_API_KEY=
-CRM_URL=
+BOT_TOKEN=your_bot_token
+WEBHOOK_URL=https://your_domain.com
+API_KEY=pDUAhKJaZZlSXnWtSberXS6PCwfiGP4D
+CRM_URL=https://valentinkalinovski.retailcrm.ru
+REDIS_HOST=localhost
+REDIS_PORT=6379
