--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 BOT_TOKEN=your_bot_token
-WEBHOOK_URL=WEBHOOK_URL=https://web-production-e32d7.up.railway.app/webhook
+WEBHOOK_URL=https://web-production-e32d7.up.railway.app/webhook
 API_KEY=pDUAhKJaZZlSXnWtSberXS6PCwfiGP4D
 CRM_URL=https://valentinkalinovski.retailcrm.ru
 REDIS_HOST=localhost
