--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-BOT_TOKEN=your_bot_token
-WEBHOOK_URL=https://web-production-e32d7.up.railway.app/webhook
-API_KEY=pDUAhKJaZZlSXnWtSberXS6PCwfiGP4D
-CRM_URL=https://valentinkalinovski.retailcrm.ru
-REDIS_HOST=localhost
-REDIS_PORT=6379
+TELEGRAM_TOKEN=your_bot_token_here
+CRM_API_KEY=your_crm_api_key
+CRM_URL=https://yourcrm.retailcrm.ru
+REDIS_URL=redis://default@redis:6379/0
+ADMIN_TELEGRAM_ID=your_admin_id
