--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ CRM_API_KEY=your_crm_api_key
 CRM_URL=https://yourcrm.retailcrm.ru
 REDIS_URL=redis://default@redis:6379/0
 ADMIN_TELEGRAM_ID=your_admin_id
+WEBHOOK_URL=https://your-app-name.railway.app
