--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,18 @@
+# Telegram bot
 TELEGRAM_TOKEN=your_bot_token_here
-CRM_API_KEY=your_crm_api_key
-CRM_URL=https://yourcrm.retailcrm.ru
-REDIS_URL=redis://default@redis:6379/0
-ADMIN_TELEGRAM_ID=your_admin_id
+
+# RetailCRM
+CRM_API_KEY=your_crm_api_key_here
+CRM_URL=https://valentinkalinovski.retailcrm.ru
+
+# Admin
+ADMIN_TELEGRAM_ID=123456789
+
+# Webhook
 WEBHOOK_URL=https://your-app-name.railway.app
+
+# Redis (optional if using external Redis)
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
