--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,8 @@
-# Telegram bot
-TELEGRAM_TOKEN=your_bot_token_here
-
-# RetailCRM
-CRM_API_KEY=your_crm_api_key_here
+TELEGRAM_BOT_TOKEN=your_telegram_token_here
+WEBHOOK_URL=https://your-app.onrender.com/telegram
+PORT=8080
 CRM_URL=https://valentinkalinovski.retailcrm.ru
-
-# Admin
-ADMIN_TELEGRAM_ID=123456789
-
-# Webhook
-WEBHOOK_URL=https://your-app-name.railway.app
-
-# Redis (optional if using external Redis)
-REDIS_HOST=redis
-REDIS_PORT=6379
-REDIS_DB=0
-REDIS_PASSWORD=
+CRM_API_KEY=your_crm_api_key_here
+REDIS_URL=redis://default:password@redis:6379/0
+ADMIN_CHAT_ID=123456789
+USE_WEBHOOK=1
