--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 TELEGRAM_BOT_TOKEN=your_telegram_token_here
-WEBHOOK_URL=https://your-app.onrender.com/telegram
+WEBHOOK_URL=https://your-app.onrender.com   # без /telegram — добавится автоматически
 PORT=8080
 USE_WEBHOOK=1
 
