--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,18 @@
-TELEGRAM_BOT_TOKEN=your_telegram_token_here
-WEBHOOK_URL=https://your-app.onrender.com   # без /telegram — добавится автоматически
-PORT=8080
-USE_WEBHOOK=1
+# Telegram bot
+TELEGRAM_TOKEN=your_bot_token_here
 
-CRM_URL=https://valentinkalinovski.retailcrm.ru
+# RetailCRM
 CRM_API_KEY=your_crm_api_key_here
+CRM_URL=https://valentinkalinovski.retailcrm.ru
 
-ADMIN_CHAT_ID=123456789
+# Admin
+ADMIN_TELEGRAM_ID=123456789
+
+# Webhook
+WEBHOOK_URL=https://your-app-name.railway.app
+
+# Redis (optional if using external Redis)
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
